--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
         "postcss": "^8.4.7",
         "postcss-import": "^14.0.2",
         "tailwindcss": "^3.0.23"
+    },
+    "dependencies": {
+        "data-table": "^2.0.0",
+        "datatables.net": "^1.11.5",
+        "datatables.net-dt": "^1.11.5"
     }
 }
